base/trusted-service/trusted-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trusted-service-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: trusted-service
