base/trusted-service/trusted-service-global-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trusted-service-global-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-internal
spec:
  rules:
    - host: app-global.bpsusine.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trusted-service-service
                port:
                  name: http
  tls:
    - hosts:
        - app-global.bpsusine.com
      secretName: trusted-service-global-cert
