base/trusted-service/trusted-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trusted-service-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: app.bpsusine.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trusted-service-service
                port:
                  name: http
  tls:
    - hosts:
        - app.bpsusine.com
      secretName: trusted-service-cert
